# LuminaREACT-firmware

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  Analyzer.ioc  CMakeLists.txt  Doxyfile  LuminaREACT.ioc  README.md  client.py  ussp.py  util.py
CMake/: GNU-ARM-Toolchain.cmake  stlink.cmake
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  color.h  i2c.h  luminareact.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  test_signal.h  ussp.h  ws2812.h
Core/Inc/drivers/: i2c.h
Core/Src/: CMakeLists.txt  color.c  freertos.c  luminareact.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  ussp.c  ws2812.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS_DSP/Source/CommonTables/: CommonTablesF16.c
Drivers/CMSIS_DSP/Source/ComplexMathFunctions/: ComplexMathFunctions.c
Drivers/CMSIS_DSP/Source/ControllerFunctions/: ControllerFunctions.c
Drivers/CMSIS_DSP/Source/FastMathFunctions/: FastMathFunctions.c
Drivers/CMSIS_DSP/Source/FilteringFunctions/: FilteringFunctions.c
Drivers/CMSIS_DSP/Source/StatisticsFunctions/: StatisticsFunctions.c
Drivers/CMSIS_DSP/Source/TransformFunctions/: TransformFunctions.c
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
inc/: ws2812.h
inc/drivers/: adc.h  cat5171.h
src/: CMakeLists.txt  main.c  ws2812.c
src/drivers/: CMakeLists.txt  adc.c  cat5171.c  i2c.c
